@@ -481,6 +481,7 @@ public class DockableWindowManager extends JPanel implements EBComponent
 					+ ".label");
 				if(label == null)
 					label = "NO LABEL PROPERTY: " + name;
+				System.err.println("label is " + label);
 
 				String[] args = { label };
 				jEdit.setTemporaryProperty(name + ".label",
